# churchtools-ta-sync

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yaml  config.example.yaml  db.rs
.github/workflows/: cargo-test.yml
.sqlx/: query-461326058c9cc0780060745d7e5e0b6f3fa474080b8356ef591931b2b01baf06.json  query-568a8f0d2cf1e628fef98a9c7e040083ed2194bcbbf7a6a89c6a3892917d39db.json  query-7887b96873fef2bab31d0321da5bd39ccddbeef4084318dc3cfdddce5758d9d9.json  query-95fa2445d22da8a43762cd937288f5c5a00f367f8a95c9f2f4ba235e5409f2e5.json  query-fcebeadf8480a9d8dc00ee28cb904cec611dfc9dd774dfacdc0a35d7f6f2ca5b.json
migrations/: 001_bookings.up.sql
src/: config.rs  db.rs  get_from_ct.rs  main.rs  pull_from_ct.rs  push_to_ta.rs  read_ext_temp.rs
src/fixtures/: 001_good_data.sql
