[package]
name = "ct-ta-sync"
version = "0.2.2"
edition = "2021"
authors = ["Jonathan Schleucher"]
categories = ["network-programming"]
keywords = ["COE", "churchtools", "Technische Alternative"]
license = "MIT-0"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "serde"] }
coe = "0.2.1"
itertools = "0.13.0"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "env-filter"] }
